# libg2o-release

./: 0001-Added-install-rule-for-package.xml.patch  0001-add-package.xml-install-rule-and-remove-arch-depende.patch  0001-add-package.xml.patch  0001-install-package.xml-and-fix-arch-problem.patch  0002-Skip-setting-sse-ssse-compile-options-for-arm-and-aa.patch  0002-Skip-setting-sse-ssse-compile-options-for-arm-proces.patch  0002-bump-version-number.patch  0002-deal-with-non-standard-CMAKE_BUILD_TYPE-None.patch  0002-remove-march-for-potential-build-farm-problems.patch  0003-Skipping-sse-compile-options-also-for-aarch64.patch  0003-add-the-new-catkin-call.patch  0003-deal-with-non-standard-CMAKE_BUILD_TYPE-None.patch  0004-fix-the-g2o-call.patch  0005-add-a-stack.xml.patch  0006-add-a-copyright.patch  0007-2012.11.04.patch  0008-fix-the-CMake-for-Fuerte.patch  0009-specify-libraries.patch  0010-2012.11.08.patch  0011-add-the-missing-libraries.patch  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  stack.xml  tracks.yaml
debian/: changelog  control  gbp.conf  rules
indigo/: package.xml
lunar/: package.xml
rpm/: ros-jade-libg2o.spec  ros-kinetic-libg2o.spec  ros-lunar-libg2o.spec  ros-melodic-libg2o.spec  ros-noetic-libg2o.spec  template.spec
