<package>
  <name>libg2o</name>
  <description>g2o SLAM library</description>
  <version>2012.11.04</version>
  <author>Rainer Kuemmerle</author>
  <author>Giorgio Grisetti</author>
  <author>Hauke Strasdat</author>
  <author>Kurt Konolige</author>
  <author>Wolfram Burgard</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <url>https://openslam.informatik.uni-freiburg.de/data/svn/g2o/trunk/</url>
  <license>BSD</license>

  <build_depend>catkin</build_depend>
  <build_depend>cmake</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>opengl</build_depend>
  <build_depend>suitesparse</build_depend>

  <run_depend>eigen</run_depend>
  <run_depend>opengl</run_depend>
  <run_depend>suitesparse</run_depend>
</package>
